--- a/giaotrinh.html
+++ b/giaotrinh.html
@@ -20,6 +20,7 @@
             <img src="img/Logo.png" alt="Jellyfish" class="logo">
             <div class="search-box">
                 <input type="text" placeholder="Tìm kiếm...">
+                <img src="img/search 02.png" alt="Tìm kiếm">
             </div>      
             <a href="#" class="btn btn-consult">ĐĂNG KÝ TƯ VẤN</a>
             <a href="tel:0961106466" class="btn btn-hotline">096.110.6466</a>
@@ -43,7 +44,7 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6360.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6360.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -57,7 +58,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6361.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6361.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -71,7 +72,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6362.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6362.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -85,7 +86,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6363.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6363.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -99,7 +100,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6364.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6364.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -113,7 +114,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-img-wrapper"> 
-                            <img src="img/Rectangle 6365.png" alt="Giáo trình N5">
+                            <a href="giaotrinhchitiet.html"><img src="img/Rectangle 6365.png" alt="Giáo trình N5"></a>
                         </div>
                         <div class="product-info">
                             <span class="category">Giáo trình N5</span>
@@ -191,8 +192,8 @@
               <li><a href="index.html">Trang chủ</a></li>
               <li><a href="ve_jellyfish_vn.html">Về Jellyfish</a></li>
               <li><a href="khoahoc.html">Khóa học</a></li>
-              <li><a href="#">Giáo trình</a></li>
-              <li><a href="#">Kiến thức hữu ích</a></li>
+              <li><a href="giaotrinh.html">Giáo trình</a></li>
+              <li><a href="kienthuchuuich.html">Kiến thức hữu ích</a></li>
           </ul>
         </div>
 
