--- a/ve_jellyfish_vn.html
+++ b/ve_jellyfish_vn.html
@@ -22,6 +22,7 @@
             <img src="img/Logo.png" alt="Jellyfish" class="logo">
             <div class="search-box">
                 <input type="text" placeholder="Tìm kiếm...">
+                <img src="img/search 02.png" alt="Tìm kiếm">
             </div>      
             <a href="#" class="btn btn-consult">ĐĂNG KÝ TƯ VẤN</a>
             <a href="tel:0961106466" class="btn btn-hotline">096.110.6466</a>
@@ -129,8 +130,8 @@
               <li><a href="index.html">Trang chủ</a></li>
               <li><a href="ve_jellyfish_vn.html">Về Jellyfish</a></li>
               <li><a href="khoahoc.html">Khóa học</a></li>
-              <li><a href="#">Giáo trình</a></li>
-              <li><a href="#">Kiến thức hữu ích</a></li>
+              <li><a href="giaotrinh.html">Giáo trình</a></li>
+              <li><a href="kienthuchuuich.html">Kiến thức hữu ích</a></li>
           </ul>
         </div>
 
